# GeoMapper

./: README.md  pyproject.toml
src/GeoMapping/: __init__.py  formatSpreadSheet.py
src/GeoMapping/afforestation/: __init__.py  afforestation.py  formatTable.py
src/GeoMapping/afforestation/imports/: __init__.py  import_csv.py  import_excel.py
src/GeoMapping/format/: __init__.py  formatTable.py  reader.py
src/GeoMapping/format/coordinates/: __init__.py  convertCoordinates.py
src/GeoMapping/format/readers/: __init__.py  csv.py  excel.py
