[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"


[project]

name = "GeoMapper"
version = "0.0.1"
authors = [
  { name="Pedro Rodrigues", email="p.hrdrigues1@gmail.com" },
]

description = """Package utilizado para tratamento básico automático de planilhas e conversão para .xlsx e GeoJson
Utilizado no projeto de PIBIC com foco em mapeamento ambiental."""

readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "Unidecode >= 1.3.8",
  "pandas >= 2.2.3"
]

